--- a/src/locale/bg.json
+++ b/src/locale/bg.json
@@ -212,6 +212,11 @@
       "TITLE": "Няма активирани доставчици",
       "MESSAGE": "Този уебсайт не е активирал доставчици на самоличност или локално удостоверяване. Моля, свържете се с администратора на уебсайта за повече информация.",
       "CONFIRM": "Добре"
+    },
+    "NULL_EMAIL_ERROR": {
+        "TITLE": "Изисква се имейл адрес",
+        "MESSAGE": "Доставчикът, с който сте се удостоверили, не е предоставил Вашия имейл адрес. Моля, влезте чрез друг доставчик.",
+        "CONFIRM": "Върнете се към Вход"
     }
   },
   "RES_MAPPING": {
