--- a/src/locale/ja.json
+++ b/src/locale/ja.json
@@ -213,7 +213,12 @@
             "TITLE": "有効なプロバイダがありません",
             "MESSAGE": "このウェブサイトは、IDプロバイダやローカル認証を有効にしていません。詳細については、ウェブサイトの管理者にお問い合わせください。",
             "CONFIRM": "OK"
-        }
+        },
+		"NULL_EMAIL_ERROR": {
+			"TITLE": "メールアドレスは必須です",
+			"MESSAGE": "認証に利用したプロバイダーからあなたのメールアドレスを取得できませんでした。別のプロバイダーでログインしてください。",
+			"CONFIRM": "ログインに戻る"
+		}
     },
     "RES_MAPPING": {
         "invalid_pin": "PINが正しいものかご確認ください",
