--- a/src/locale/uk.json
+++ b/src/locale/uk.json
@@ -213,7 +213,12 @@
             "TITLE": "Немає активованих постачальників",
             "MESSAGE": "На цьому вебсайті не активовані жодні постачальники ідентифікації або локальна автентифікація. Для отримання додаткової інформації зверніться до адміністратора вебсайту.",
             "CONFIRM": "ОК"
-        }
+        },
+		"NULL_EMAIL_ERROR": {
+			"TITLE": "Потрібна адреса електронної пошти",
+			"MESSAGE": "Провайдер, за допомогою якого ви авторизувалися, не надав адреси вашої електронної пошти. Будь ласка, увійдіть за допомогою іншого провайдера.",
+			"CONFIRM": "Повернутися до авторизації"
+		}
     },
     "RES_MAPPING": {
         "invalid_pin": "Перевірте правильність PIN-коду",
