--- a/src/locale/zh-CN.json
+++ b/src/locale/zh-CN.json
@@ -213,7 +213,12 @@
             "TITLE": "没有启用提供方",
             "MESSAGE": "此网站没有启用任何身份验证提供方或者本地认证。请联系网站管理员了解更多信息。",
             "CONFIRM": "确认"
-        }
+        },
+		"NULL_EMAIL_ERROR": {
+        "TITLE": "电子邮件地址必填",
+        "MESSAGE": "您通过身份验证的提供商未提供您的电子邮件地址。请通过其他提供商登录。",
+        "CONFIRM": "返回登录"
+		}
     },
     "RES_MAPPING": {
         "invalid_pin": "请检查你是否拥有正确的 PIN 码",
