--- a/src/locale/uk.json
+++ b/src/locale/uk.json
@@ -11,7 +11,7 @@
         "MORE": "більше>>"
     },
     "INCOGNITO": {
-        "TITLE": "Ласкаво просимо"
+        "TITLE": "Зареєструватися / Увійти"
     },
     "REGISTER": {
         "TITLE": "Ласкаво просимо",
@@ -80,6 +80,7 @@
         "W_": "w/",
         "WITH_EMAIL": "Увійти за допомогою електронної адреси",
 		"DEIDENTIFY": "Деідентифікувати %NAME%",
+		"DEIDENTIFY_WITH": "Деідентифікувати %WITH% %BRAND%",
         "BRAND": {
             "GOOGLE": "Google",
             "FACEBOOK": "Facebook",
@@ -256,5 +257,10 @@
         "LOGGING_IN": "Вхід у систему",
         "CONFIRM_MESSAGE": "Ми надіслали посилання для підтвердження вашого облікового запису на вказану вище електронну адресу. Натисніть на посилання, щоб завершити вхід.",
         "FOCUS_MASK_TEXT": "Почніть за допомогою вказаної електронної адреси"
+    },
+    "CONTENT_GATING": {
+        "TITLE_W_NAME": "Ласкаво просимо до %NAME%",
+        "TITLE": "Ласкаво просимо",
+        "SUBTITLE": "Увійдіть або створіть свій безкоштовний акаунт, щоб продовжити читання."
     }
 }
