--- a/src/locale/fr.json
+++ b/src/locale/fr.json
@@ -11,7 +11,7 @@
         "MORE": "plus>>"
     },
     "INCOGNITO": {
-        "TITLE": "Bienvenue"
+        "TITLE": "S'inscrire / Se connecter"
     },
     "REGISTER": {
         "TITLE": "Bienvenue",
@@ -77,6 +77,7 @@
         "CONTINUE": "Continuer %WITH% %BRAND%",
         "SIGN_IN": "Se connecter %WITH% %BRAND%",
 		"DEIDENTIFY": "Anonymiser %NAME%",
+		"DEIDENTIFY_WITH": "Anonymiser %WITH% %BRAND%",
         "WITH": "avec",
         "W_": "avec",
         "WITH_EMAIL": "Se connecter avec une adresse e-mail",
@@ -256,5 +257,10 @@
         "NAMELESS_CONTENT_ALL": "En m'inscrivant, en me connectant, ou en poursuivant, j'adhère aux <a href='%TOC_LINK%' target='_blank'>Conditions d'utilisation</a> et à la <a href='%PRIVACY_LINK%' target='_blank'>Politique de confidentialité</a>",
         "NAMELESS_CONTENT_TOC": "En m'inscrivant, en me connectant, ou en poursuivant, j'adhère aux <a href='%TOC_LINK%' target='_blank'>Conditions d'utilisation</a>",
         "NAMELESS_CONTENT_PRIVACY": "En m'inscrivant, en me connectant, ou en poursuivant, j'adhère à la <a href='%PRIVACY_LINK%' target='_blank'>Politique de confidentialité</a>"
+    },
+    "CONTENT_GATING": {
+        "TITLE_W_NAME": "Bienvenue chez %NAME%",
+        "TITLE": "Bienvenue",
+        "SUBTITLE": "Connectez-vous ou créez votre compte gratuitement pour continuer à lire."
     }
 }
