--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -128,6 +128,7 @@
     "SIGN_IN": "Sign in",
     "CONFIRM": "Confirm email",
     "CONFIRM_PIN": "Confirm PIN",
+    "OR_CONTINUE_WITH_EMAIL_OPTIN": "or",
     "OR_CONTINUE_WITH_EMAIL": "or continue with your email address",
     "OR_SIGN_UP_WITH_EMAIL_AND_PASSWORD": "Or sign up with your email address and password",
     "CONTINUE_WITH_EMAIL": "or enter your email address below",
@@ -135,7 +136,9 @@
     "START_WITH_EMAIL_ADDRESS": "Start with your email address below",
     "DE_IDENTIFY_ME": "De-Identify me",
     "SWITCH_DE_IDENTIFY": "De-identify a different email address?",
-    "RETURN_TO_LOGIN": "Return to Login"
+    "RETURN_TO_LOGIN": "Return to Login",
+    "SUBMIT": "Submit",
+    "SIGN_OUT": "Sign out"
   },
   "HOVER": {
     "EMAIL_MATCH": "Please ensure that the email address you use when signing in is one that has been invited to register.",
@@ -177,6 +180,9 @@
       "TITLE": "Email format",
       "MESSAGE": "Please make sure you're using a valid email address",
       "CONFIRM": "ok"
+    },
+    "EMPTY_MESSAGE" : {
+      "MESSAGE": "Message is required"
     },
     "PASSWORD_EMPTY": {
       "TITLE": "Password too short",
@@ -222,6 +228,9 @@
       "TITLE": "Email Address Required",
       "MESSAGE": "The Provider that you authenticated with did not provide your email address. Please log in with a different provider.",
       "CONFIRM": "Return to Login"
+    },
+    "MAGIC_LINK_REGISTRATION_DISABLED": {
+      "MESSAGE": "New users cannot register with sign in link."
     }
   },
   "RES_MAPPING": {
@@ -234,12 +243,12 @@
     "BUTTON_2": "Read our policy"
   },
   "TOC_PRIVACY": {
-    "CONTENT_ALL": "By signing up, signing in or continuing, I agree to %APP_NAME%'s <a href='%TOC_LINK%' target='_blank'>Terms of Service</a> and <a href='%PRIVACY_LINK%' target='_blank'>Privacy Policy</a>",
-    "CONTENT_TOC": "By signing up, signing in or continuing, I agree to %APP_NAME%'s <a href='%TOC_LINK%' target='_blank'>Terms of Service</a>",
-    "CONTENT_PRIVACY": "By signing up, signing in or continuing, I agree to %APP_NAME%'s <a href='%PRIVACY_LINK%' target='_blank'>Privacy Policy</a>",
-    "NAMELESS_CONTENT_ALL": "By signing up, signing in or continuing, I agree to the <a href='%TOC_LINK%' target='_blank'>Terms of Service</a> and <a href='%PRIVACY_LINK%' target='_blank'>Privacy Policy</a>",
-    "NAMELESS_CONTENT_TOC": "By signing up, signing in or continuing, I agree to the <a href='%TOC_LINK%' target='_blank'>Terms of Service</a>",
-    "NAMELESS_CONTENT_PRIVACY": "By signing up, signing in or continuing, I agree to the <a href='%PRIVACY_LINK%' target='_blank'>Privacy Policy</a>"
+    "CONTENT_ALL": "By submitting my information, I agree to the <a href='%TOC_LINK%' target='_blank'>Terms of Service</a> and <a href='%PRIVACY_LINK%' target='_blank'>Privacy Policy</a>",
+    "CONTENT_TOC": "By submitting my information, I agree to the <a href='%TOC_LINK%' target='_blank'>Terms of Service</a>",
+    "CONTENT_PRIVACY": "By submitting my information, I agree to the <a href='%PRIVACY_LINK%' target='_blank'>Privacy Policy</a>",
+    "NAMELESS_CONTENT_ALL": "By submitting my information, I agree to the <a href='%TOC_LINK%' target='_blank'>Terms of Service</a> and <a href='%PRIVACY_LINK%' target='_blank'>Privacy Policy</a>",
+    "NAMELESS_CONTENT_TOC": "By submitting my information, I agree to the <a href='%TOC_LINK%' target='_blank'>Terms of Service</a>",
+    "NAMELESS_CONTENT_PRIVACY": "By submitting my information, I agree to the <a href='%PRIVACY_LINK%' target='_blank'>Privacy Policy</a>"
   },
   "UI": {
     "LOGOUT": "Logout",
@@ -254,8 +263,9 @@
     "NEWSLETTER_SUBSCRIBE": "Subscribe"
   },
   "MAGIC_LINK": {
-    "SEND_BUTTON_TEXT": "Send Magic Link",
-    "LEAVE_MAGIC_LINK": "Sign-in by selecting an IDP or using your email & password",
+    "SEND_BUTTON_TEXT": "Send sign in link",
+    "LEAVE_MAGIC_LINK": "Sign in with a trusted provider or email & password",
+    "LEAVE_MAGIC_LINK_OPT_IN": "Sign in with a trusted provider or using your email",
     "CHECK_YOUR_EMAIL": "Check your email",
     "CHECK_YOUR_EMAIL_2": "%FIRST_NAME%, check your email",
     "CONFIRMING": "Confirming Authentication",
@@ -273,5 +283,16 @@
     "SUB_HEADER": "We just have a few questions we'd like to ask you",
     "SUBMIT": "Submit",
     "MANDATORY": "This field is mandatory."
+  },
+  "CONTACT_US": {
+    "HEADER": "Get in touch",
+    "SUB_HEADER": "%FIRST_NAME%, how can we help?",
+    "COLLAPSE": "Get in touch with us.",
+    "BUTTON": "%FIRST_NAME%, send your message",
+    "MESSAGE_INPUT": "Enter your message here",
+    "PHONE_NUMBER":  "Phone Number (optional)",
+    "COMPANY_NAME": "Company Name (optional)",
+    "SUCCESS":  "Thanks for reaching out, %FIRST_NAME%. We’ll get back to you as soon as possible.",
+    "ICON_NOTE": "Connect with us"
   }
 }
